--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
+  height: 100vh;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(to top, #ee871f, #1f88ee);
+  background-color: #213547;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
