fix(button): ios color fix

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   width: 15em;
+  color: white;
 }
 button:hover {
   border-color: #646cff;
